server/zanata-war/src/main/webapp/resources/assets/css/application.css
.l--clearfix-overflow {
  *zoom: 1;
}
.l--clearfix-overflow:after {
  content: "";
  display: table;
  clear: both;
}

#container {
  width: 100%;
  font-family: "Source Sans Pro", "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

html {
  overflow: hidden !important;
}

html,
body,
.off-canvas__outer,
.off-canvas__inner,
#container {
  height: 100% !important;
  font-family: "Source Sans Pro", "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif;
}

/*
Styling for errors when webtrans fails to load
*/
div.AppLoadError {
  font-weight: bold;
  font-size: 1.3em;
  color: #ff2222;
  padding: 25px;
}

/*
Removes some of the styling on the page-level splitters
*/
.gwt-SplitLayoutPanel-HDragger {
  cursor: col-resize;
  background: #E0E8EE;
}

.gwt-SplitLayoutPanel-VDragger {
  cursor: row-resize;
  background: #E5E5E5;
}

.gwt-Button, .gwt-PushButton {
  outline: none;
}

.transUnitCol,
.transUnitCol td {
  font-size: 1em !important;
}

.transUnitCol .sourceContentsContainer,
.transUnitCol .TableEditorCell-Target > table > tbody > tr > td {
  padding: 1.25em 0 0 !important;
}

.transUnitCol .sourceContentsContainer {
  padding-bottom: .7em !important;
}

.transUnitCol .buttons {
  font-size: 16px;
}

.THEMES_DEFAULT {
  font-size: 16px;
}

.THEMES_COMPACT {
  font-size: 14px;
}

.THEMES_LOOSE {
  font-size: 20px;
}

.sourceContentsContainer .g--tight {
  padding: 0 !important;
  margin: 0 !important;
  position: relative;
}

.sourceContentsContainer > .g--tight + .g--tight {
  margin-top: 1.25em !important;
}

.sourceContentsContainer > .g--tight:not(:only-of-type):hover {
  background: rgba(0, 0, 0, 0.05);
  cursor: pointer;
}

.sourceContentsContainer .w--11-12 {
  width: 100% !important;
  padding-right: 3em !important;
}

.sourceContentsContainer .w--1-12 {
  position: absolute;
  right: 1.5em;
  top: .5em;
}

.TableEditorCell-Target .g--tight {
  position: relative !important;
  margin: 0 !important;
  padding: 0 !important;
}

.TableEditorCell-Target .w--1-12 {
  width: 1.5em !important;
  position: absolute;
  padding: 0 !important;
  left: -1.1em;
  top: -0.85em;
}

.TableEditorCell-Target .w--1-12 .icon-right-1 {
  border-radius: 50px;
  background-color: #fff;
  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
  transition: .2s ease-out;
  display: inline-block;
  padding: 6px;
  text-align: center;
}
.TableEditorCell-Target .w--1-12 .icon-right-1:hover {
  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
  background-color: #f4f4f4;
}
.TableEditorCell-Target .w--1-12 .icon-right-1:active {
  box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
  background-color: #eee;
}
.TableEditorCell-Target .w--1-12 .icon-right-1:before {
  margin-right: 0;
}

.TableEditorCell-Target .w--11-12 {
  width: 100% !important;
  padding-left: 3em !important;
}

.TableEditorCell-Target table,
.TableEditorCell-Target tbody,
.TableEditorCell-Target tr,
.TableEditorCell-Target td {
  display: block !important;
  overflow: visible !important;
}

.transUnitCol.transUnitCol > ul {
  margin: 0 !important;
}

.transUnitCol:first-child > ul > li:nth-of-type(3) {
  padding: .2em .75em;
}

.transUnitCol:first-child > ul > li:nth-of-type(3) > a {
  margin-top: .1em !important;
}

.TableEditorRow > li:nth-of-type(3) {
  padding-top: .375em;
  padding-bottom: .375em;
  padding-right: 1em;
}

.TableEditorCell-Target > table > tbody {
  background-color: rgba(250, 250, 250, 0.8);
}

.selected .TableEditorCell-Target > table > tbody {
  content: "";
  background-color: rgba(255, 255, 255, 0.8);
}

.transUnitCol {
  position: relative;
}

.transUnitTable {
  display: table !important;
  table-layout: fixed;
}

.transUnitTable tr.selected {
  background-color: #fff;
  opacity: 1 !important;
}

.transUnitTable > tbody > tr.selected > td {
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.03), 0 -4px 6px rgba(0, 0, 0, 0.03);
}

tr > .transUnitCol:last-child {
  background-color: rgba(250, 250, 250, 0.8);
}

tr.selected > .transUnitCol:last-child {
  background-color: rgba(255, 255, 255, 0.8);
}

.transUnitTable > tbody > tr:hover, .transUnitTable > tbody > tr:hover .fadeElement {
  opacity: 1;
}

.transUnitTable tr.selected .fadeElement, .transUnitTable tr.selected:hover .fadeElement {
  opacity: 1;
}

.transUnitTable > tbody > tr {
  opacity: 0.95;
  background-color: rgba(250, 250, 250, 0.8);
}

.transUnitTable > tbody > tr .fadeElement {
  opacity: 0;
}

.transUnitTable > tbody > tr > td {
  border-bottom: 1px solid;
  border-color: rgba(211, 211, 211, 0.4);
}

.transUnitTable td {
  padding: 0;
}

.TableEditorRow {
  position: relative;
  border-left: 4px solid #bcd4dc;
}

.TableEditorRow > li:first-child {
  position: absolute;
  top: 3px;
  left: 0;
}

tr.TableEditorRow.content-filter-nomatch {
  filter: alpha(opacity=25);
  opacity: 0.25;
}

.ApprovedStateDecoration {
  border-left: 4px solid #03A6D7;
}

.FuzzyStateDecoration {
  border-left: 4px solid #E9DF1B;
}

.TranslatedStateDecoration {
  border-left: 4px solid #5CCA7B;
}

.RejectedStateDecoration {
  border-left: 4px solid #FFA800;
}

/* Search-replace page
 * TODO arrange for these to share styles with editor table
 */
.gwt-ListBox {
  color: inherit;
}

.projectWideSearchBoxLabel {
  font-size: 1.2em;
  margin-left: 30px;
}

.projectWideSearchReportLabel {
  margin-left: 40px;
  color: #555588;
  font-size: 1.1em;
}

.projectWideSearchSelectAllChk {
  margin-left: 27px;
}

.projectWideSearchLogPanel {
  background-color: #667788;
  color: #ffffff;
  border-top: 3px solid #e0e8ee;
  padding: 0px 30px;
}

.projectWideSearchSelectionInfo {
  font-size: 1.3em;
  white-space: nowrap;
}

.projectWideReplacButton-Disabled {
  color: #777777;
  background-color: #bbbbbb;
  border: 2px solid #bbbbbb;
}

.projectWideReplaceFeedbackLabel {
  margin-left: 60px;
  color: #ffffff;
  font-size: 1.2em;
}
/* ... */

